# clickmd

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  Taskfile.yml  app.doql.css  devtools.py  goal.yaml  planfile.yaml  project.sh  pyproject.toml  pyqual.yaml  redsl_refactor_plan.md  renderer.py
.pyqual/: ruff.json
.taskill/: state.json
docs/: API.md  CONTRIBUTING.md  README.md
examples/: api_response.py  basic.py  build_script.py  cli_app.py  cli_colors.py  colored_logging.py  config_viewer.py  custom_renderer.py  logger_usage.py  markdown_help.py  one_liners.py  phase1_features.py  phase3_progress.py  phase4_themes.py  phase5_devtools.py  quickstart.py  simple_cli.py
examples_output/: api_response.md  basic.md  cli_colors.md  config_viewer.md  logger_usage.md  one_liners.md  quickstart.md
project/: README.md  analysis.toon  analysis.toon.yaml  analysis.yaml  calls.mmd  compact_flow.mmd  context.md  dashboard.html  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  flow.mmd  flow.toon  index.html  map.toon  map.toon.yaml  project.toon  project.toon.yaml  project.yaml  prompt.txt  validation.toon.yaml
project/verify/: validation.toon.yaml
scripts/: bump_version.py
src/clickmd/: __init__.py  decorators.py  devtools.py  help.py  logger.py  progress.py  renderer.py  rich_backend.py  themes.py
tests/: test_core.py  test_decorators.py  test_logger.py  test_renderer.py
tools/: md_to_html.py  test_examples_md.py
